[package]
name = "aruna-cache"
version = "0.1.0"
edition = "2021"
description = "A library to cache resources for AOS"
repository = "https://github.com/ArunaStorage/aruna-cache"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dashmap = "5.5.0"
diesel-ulid = "0.2.0"
ahash = "0.8.3"
aruna-rust-api = "2.0.0-alpha.4"
tokio = {version = "1.28.2", features = ["full"]}
tonic = {version = "0.9.2", features = ["tls"]}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "performance"
harness = false
