[package]
name = "aruna-cache"
version = "0.2.0"
edition = "2021"
description = "A library to cache resources for AOS"
repository = "https://github.com/ArunaStorage/aruna-cache"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dashmap = "5.5.0"
diesel-ulid = "0.2.0"
ahash = "0.8.3"
aruna-rust-api = "2.0.0-alpha.7"
tokio = {version = "1.29.1", features = ["full"]}
tonic = {version = "0.9.2", features = ["tls"]}
async-trait = "0.1.71"
xxhash-rust = {version="0.8.6", features=["xxh3"]}
bincode = "1.3.3"
base64 = "0.21.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "performance"
harness = false
